--- a/src/main/resources/css/theme.css
+++ b/src/main/resources/css/theme.css
@@ -50,6 +50,10 @@ dl dt {
   font-size: 14px;
 }
 
+table {
+    display: none;
+}
+
 table, th, td {
   text-align: center;
   border: 1px solid black;
@@ -57,6 +61,25 @@ table, th, td {
   width: 50%;
   margin: 0 auto;
   padding: 5px;
+}
+
+#loadingTable {
+    color: #3498db;
+}
+
+#loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+    display: inline-block;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 form button {
